<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/decreaseTeam1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:onClick="onDecrease"
            style="@style/MinuButton" />

        <ImageView
            android:id="@+id/increaseTeam1"
            android:layout_width="@dimen/button_size"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="onIncrease"
            android:layout_centerVertical="true"
            style="@style/PlusButton" />

        <TextView
            android:id="@+id/ScoreTeam1"
            style="@style/ScrollText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="0"
            android:textSize="50dp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="Team1"
            android:textSize="40dp"
            android:textStyle="bold|italic"
            android:textAppearance="@style/TextAppearance.AppCompat">

        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/decreaseTeam2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:onClick="onDecrease"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            style="@style/MinuButton" />

        <ImageView
            android:id="@+id/increaseTeam2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:onClick="onIncrease"
           style="@style/PlusButton" />

        <TextView
            android:id="@+id/ScoreTeam2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="0"
            android:textSize="60sp"
            android:textAppearance="@style/TextAppearance.AppCompat">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:text="Team 2"
            android:textSize="40dp"
            android:textStyle="bold|italic"
            android:textAppearance="@style/TextAppearance.AppCompat">

        </TextView>


    </RelativeLayout>


</LinearLayout>