<resources>
    <string name="app_name">TODO_17</string>
    <string name="minus_button">Minus Button</string>
    <string name="plus_button">Plus button</string>
</resources>